Bug 136217 - Unable to move tag and to put tab marks in ruler under writer
Summary: Unable to move tag and to put tab marks in ruler under writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium major
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-08-28 09:02 UTC by surbun
Modified: 2020-09-17 16:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description surbun 2020-08-28 09:02:54 UTC
Description:
In the alpha version of LibO, it is, no more possible to move the tags for paragraph neither to put<:move tab marks on clicking on the ruler in writer

Steps to Reproduce:
1.Open a new file in writer
2.Try to move tag for paragraph/existing tab marks (left click+hold, try to move)
3.Click on the ruler to put a tab mark

Actual Results:
Unable to move paragraph tag neither to put tab marks

Expected Results:
On a left mouse click+hold, the paragraph tab must be able to be moved so as to modify paragraph settings
On a left click, tab marks must de able to be put and also to be able to move existing tab marks


Reproducible: Always


User Profile Reset: Yes



Additional Info:
LINUX UBUNTU 20.04 - GNOME 3.36
LibODev 7.1 Alpha - Time 23/08/2020 - 02:37:39
Comment 1 surbun 2020-08-31 03:41:03 UTC
Just tried with the latest version (30/09/2020 - 05:36:32)
The bug is still there
Comment 2 BogdanB 2020-08-31 10:38:45 UTC
Confirm with
Version: 7.1.0.0.alpha0+
Build ID: e2f4e65a7b8024c00b049eebf0d87637efda7f24
CPU threads: 4; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 3 BogdanB 2020-08-31 10:42:51 UTC
Bibisected
 489137c6252f752fa963eb499c9a461d8af23c3c is the first bad commit
commit 489137c6252f752fa963eb499c9a461d8af23c3c
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Fri Aug 14 19:44:36 2020 +0200

    source e67657d5211f6e95ddf8bd621108608573b00d5d
    
    source e67657d5211f6e95ddf8bd621108608573b00d5d

 instdir/program/libmsformslo.so | Bin 707192 -> 707192 bytes
 instdir/program/libsfxlo.so     | Bin 7832464 -> 7832464 bytes
 instdir/program/libsvtlo.so     | Bin 4083760 -> 4083760 bytes
 instdir/program/setuprc         |   2 +-
 instdir/program/versionrc       |   2 +-
 5 files changed, 2 insertions(+), 2 deletions(-)
Comment 4 Aron Budea 2020-09-12 07:37:04 UTC
That is the following commit. Adding CC: to Noel Grandin.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=e67657d5211f6e95ddf8bd621108608573b00d5d
author		Noel Grandin <noel.grandin@collabora.co.uk>	2020-08-06 13:32:43 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2020-08-14 18:03:06 +0200

loplugin:simplifybool more
Comment 5 Commit Notification 2020-09-12 12:55:06 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b881aba777de30bb6b4f365f4d7b86040882441d

tdf#136217 fix moving tag in writer

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 surbun 2020-09-17 16:10:46 UTC
Just downloaded the new version since the patch integrated.

Things seem to be OK

Thanks a lot