tdf#136217 fix moving tag in writer

regression from
    commit e67657d5211f6e95ddf8bd621108608573b00d5d
    loplugin:simplifybool more

Change-Id: I4c62a7922734ea76ecec580491bfe8b0f62b781b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102514
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>